--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -144,8 +144,8 @@
    "source": [
     "# experiment that we want to perform\n",
     "# service_name = 'tfserving-resnetv2'\n",
-    "service_name = 'bentoml-onnx-resnet50'\n",
-    "# service_name = 'bentoml-iris'\n",
+    "# service_name = 'bentoml-onnx-resnet50'\n",
+    "service_name = 'bentoml-iris'\n",
     "# service_name = 'tfserving-mobilenetv1'\n",
     "\n",
     "override_url = f'http://localhost:3000/proxy/{service_name}'\n",
