running an experiment

--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -41,7 +41,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from pacswg.timer import TimerClass\n",
+    "import pacswg\n",
     "\n",
+    "from exp_trace_utils import get_time_with_tz\n",
     "import exp_trace_utils"
    ]
   },
@@ -61,6 +63,7 @@
     "# slo_timeout = \n",
     "\n",
     "service_name = 'bentoml-iris'\n",
+    "service_url = f'{server_address}/proxy/{service_name}'\n",
     "slo_timeout = 500\n",
     "initial_batch_size = 5\n",
     "bs_config = {\n",
@@ -79,6 +82,12 @@
     "\n",
     "# length of measurements used to estimate different batch size response times\n",
     "upstream_rt_max_len = 1000\n",
+    "\n",
+    "# experiment info\n",
+    "cpu_m = 1000\n",
+    "ram_mb = 1000\n",
+    "base_rps = 5\n",
+    "rps_list = [base_rps] * 15 + [base_rps*2] * 15 + [base_rps*3] * 15 + [base_rps*4] * 15\n",
     "\n",
     "controller = exp_trace_utils.SmartProxyController(\n",
     "    server_address=server_address,\n",
@@ -131,235 +140,24 @@
      "data": {
       "text/plain": [
        "{'maxBufferSize': 5,\n",
-       " 'averageMaxBufferSize': 6,\n",
-       " 'averageActualBatchSize': 1.3070175438596492,\n",
+       " 'averageMaxBufferSize': 3.2,\n",
+       " 'averageActualBatchSize': 1,\n",
        " 'maxBufferTimeoutMs': 400,\n",
-       " 'currentReplicaCount': 1,\n",
-       " 'currentReadyReplicaCount': 1,\n",
-       " 'currentConcurrency': 1,\n",
-       " 'averageConcurrency': 0.9,\n",
-       " 'averageArrivalRate': 4.7,\n",
-       " 'averageDepartureRate': 4.75,\n",
-       " 'averageDispatchRate': 4.75,\n",
+       " 'currentReplicaCount': 2,\n",
+       " 'currentReadyReplicaCount': 2,\n",
+       " 'currentConcurrency': 0,\n",
+       " 'averageConcurrency': 0,\n",
+       " 'averageArrivalRate': 0,\n",
+       " 'averageDepartureRate': 0,\n",
+       " 'averageDispatchRate': 0,\n",
        " 'averageErrorRate': 0,\n",
-       " 'averageTimeoutRatio': 0.9714285714285714,\n",
-       " 'reponseTimeAverage': 106.3993288590604,\n",
-       " 'reponseTimeP50': 26,\n",
-       " 'reponseTimeP95': 374,\n",
-       " 'batchResponseTimeStats': {'1': {'values': [15,\n",
-       "    16,\n",
-       "    16,\n",
-       "    16,\n",
-       "    17,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    18,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    19,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    20,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    21,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    22,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    23,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    24,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    25,\n",
-       "    26,\n",
-       "    26,\n",
-       "    26,\n",
-       "    26,\n",
-       "    26,\n",
-       "    27,\n",
-       "    27,\n",
-       "    27,\n",
-       "    27,\n",
-       "    28,\n",
-       "    30,\n",
-       "    30,\n",
-       "    33,\n",
-       "    34,\n",
-       "    36,\n",
-       "    38,\n",
-       "    42,\n",
-       "    50],\n",
-       "   'stats': {'q50': 22,\n",
-       "    'q95': 27,\n",
-       "    'average': 22.146596858638745,\n",
-       "    'count': 191},\n",
-       "   'batchSize': 1},\n",
-       "  '2': {'values': [20, 20, 21, 21, 21, 21, 21, 22, 22, 22, 23, 23, 23, 23, 23],\n",
-       "   'stats': {'q50': 22, 'q95': 23, 'average': 21.733333333333334, 'count': 15},\n",
-       "   'batchSize': 2},\n",
-       "  '3': {'values': [21, 21, 22, 22, 22, 22, 22, 22, 22, 23, 24, 24, 29, 36],\n",
-       "   'stats': {'q50': 22,\n",
-       "    'q95': 31.449999999999996,\n",
-       "    'average': 23.714285714285715,\n",
-       "    'count': 14},\n",
-       "   'batchSize': 3},\n",
-       "  '4': {'values': [22, 23, 23, 23, 23, 24],\n",
-       "   'stats': {'q50': 23, 'q95': 23.75, 'average': 23, 'count': 6},\n",
-       "   'batchSize': 4},\n",
-       "  '5': {'values': [30],\n",
-       "   'stats': {'q50': 30, 'q95': 30, 'average': 30, 'count': 1},\n",
-       "   'batchSize': 5},\n",
-       "  '6': {'values': [23],\n",
-       "   'stats': {'q50': 23, 'q95': 23, 'average': 23, 'count': 1},\n",
-       "   'batchSize': 6}}}"
+       " 'averageTimeoutRatio': None,\n",
+       " 'reponseTimeAverage': 4858,\n",
+       " 'reponseTimeP50': 4858,\n",
+       " 'reponseTimeP95': 4858,\n",
+       " 'batchResponseTimeStats': {'1': {'values': [4557],\n",
+       "   'stats': {'q50': 4557, 'q95': 4557, 'average': 4557, 'count': 1},\n",
+       "   'batchSize': 1}}}"
       ]
      },
      "metadata": {},
@@ -452,9 +250,90 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "fetching imagenet v2\nresizing images\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9de38083ac7d42c1bd2dccfd9f696fea"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "converting to bentoml files\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "62d57c049cc4431e8855cb74af224f30"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "extracting base64 files\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cbe4124566e64500989b5db271c33e75"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "preprocessing for mobilenet\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b4c2b74907ad4e5588df02b67ac21169"
+      }
+     },
+     "metadata": {}
+    }
+   ],
    "source": [
-    "controller.start_control_thread()"
+    "# my imports\n",
+    "from helpers import kube\n",
+    "from helpers import workload\n",
+    "from helpers import util\n",
+    "from helpers import request_funcs"
    ]
   },
   {
@@ -463,6 +342,184 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "config_names = [\n",
+    "    'bentoml-iris-250m-512mb',\n",
+    "    'bentoml-onnx-resnet50-250m-512mb',\n",
+    "    'tfserving-resnetv2-250m-512mb',\n",
+    "    'tfserving-mobilenetv1-250m-512mb',\n",
+    "]\n",
+    "\n",
+    "workload_configs = {}\n",
+    "for exp_config_name in config_names:\n",
+    "    exp_file = f\"deployments/{exp_config_name}.json\"\n",
+    "    workload_spec = util.load_json_file(exp_file)\n",
+    "    workload_configs[workload_spec['name']] = workload_spec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Request Limit Overrid: 'cpu=1000m,memory=1000Mi'\n",
+      "kn service apply bentoml-iris --image ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "No changes to apply to service 'bentoml-iris'.\n",
+      "Service 'bentoml-iris' with latest revision 'bentoml-iris-00163' (unchanged) is available at URL:\n",
+      "http://bentoml-iris.default.kn.nima-dev.com\n",
+      "waiting for settings to converge\n"
+     ]
+    }
+   ],
+   "source": [
+    "# deploy the function\n",
+    "request_limit_override = f\"'cpu={cpu_m}m,memory={ram_mb}Mi'\"\n",
+    "print('Request Limit Overrid:', request_limit_override)\n",
+    "\n",
+    "workload_spec = workload_configs[service_name]\n",
+    "# override request and limit values\n",
+    "workload_spec['opts']['--request'] = request_limit_override\n",
+    "workload_spec['opts']['--limit'] = request_limit_override\n",
+    "kn_command = kube.get_kn_command(**workload_spec)\n",
+    "print(kn_command)\n",
+    "!{kn_command}\n",
+    "print('waiting for settings to converge')\n",
+    "time.sleep(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'response_time_ms': 5204.754,\n",
+       " 'request_id': 'e8124370-00e0-454d-869e-0f083663c21c',\n",
+       " 'queue_position': 0,\n",
+       " 'received_at': datetime.datetime(2021, 6, 9, 17, 5, 40, 247000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
+       " 'response_at': datetime.datetime(2021, 6, 9, 17, 5, 45, 443000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
+       " 'upstream_response_time': 4895,\n",
+       " 'upstream_request_count': 1,\n",
+       " 'response_time_ms_server': 5196,\n",
+       " 'queue_time_ms': 301}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "# call the request function with proper arguments\n",
+    "def call_request_func():\n",
+    "    request_func = request_funcs.workload_funcs[service_name]\n",
+    "    result = request_func(url=service_url)\n",
+    "\n",
+    "    return {\n",
+    "        'response_time_ms': result['response_time_ms'],\n",
+    "        'request_id': result['headers']['X-Request-Id'],\n",
+    "        'queue_position': int(result['headers']['X-SmartProxy-queuePosition']),\n",
+    "        'received_at': exp_trace_utils.from_js_timestamp(int(result['headers']['X-SmartProxy-receivedAt'])),\n",
+    "        'response_at': exp_trace_utils.from_js_timestamp(int(result['headers']['X-SmartProxy-responseAt'])),\n",
+    "        'upstream_response_time': int(result['headers']['X-SmartProxy-upstreamResponseTime']),\n",
+    "        'upstream_request_count': int(result['headers']['X-SmartProxy-upstreamRequestCount']),\n",
+    "        'response_time_ms_server': int(result['headers']['X-SmartProxy-responseTime']),\n",
+    "        'queue_time_ms': int(result['headers']['X-SmartProxy-queueTime']),\n",
+    "    }\n",
+    "\n",
+    "# adding exception handling to create worker func\n",
+    "def worker_func():\n",
+    "    try:\n",
+    "        return call_request_func()\n",
+    "    except Exception:\n",
+    "        print('exception occured:')\n",
+    "        traceback.print_exc()\n",
+    "        return None\n",
+    "\n",
+    "worker_func()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start the controller\n",
+    "controller.start_control_thread()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "============ Experiment Started ============\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'get_time_with_tz' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-cf380e6e67cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"============ Experiment Started ============\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Time Started:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_time_with_tz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrps\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrps_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_time_with_tz' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# perform the experiment\n",
+    "controller.set_initial_config()\n",
+    "\n",
+    "# start workload generator\n",
+    "wg = pacswg.WorkloadGenerator(worker_func=worker_func, rps=0, worker_thread_count=300)\n",
+    "wg.start_workers()\n",
+    "timer = TimerClass()\n",
+    "\n",
+    "print(\"============ Experiment Started ============\")\n",
+    "print(\"Time Started:\", get_time_with_tz())\n",
+    "\n",
+    "for rps in tqdm(rps_list):\n",
+    "    wg.set_rps(rps)\n",
+    "    timer.tic()\n",
+    "    # apply each for one minute\n",
+    "    while timer.toc() < 60:\n",
+    "        wg.fire_wait()\n",
+    "\n",
+    "# get the results\n",
+    "wg.stop_workers()\n",
+    "all_res = wg.get_stats()\n",
+    "total_reqs = len(all_res)\n",
+    "all_res = [d for d in all_res if d is not None]\n",
+    "success_reqs = len(all_res)\n",
+    "\n",
+    "print(\"Total Requests Made:\", total_reqs)\n",
+    "print(\"Successful Requests Made:\", success_reqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stop the controller to save the results\n",
     "controller.stop_control_thread()"
    ]
   },
