added disable controller logic

--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -83,11 +83,14 @@
     "# length of measurements used to estimate different batch size response times\n",
     "upstream_rt_max_len = 1000\n",
     "\n",
+    "# disable controller?\n",
+    "disable_controller = False\n",
+    "\n",
     "# experiment info\n",
     "cpu_m = 1000\n",
     "ram_mb = 1000\n",
-    "base_rps = 5\n",
-    "rps_list = [base_rps] * 15 + [base_rps*2] * 15 + [base_rps*3] * 15 + [base_rps*4] * 15\n",
+    "base_rps = 50\n",
+    "rps_list = [base_rps] * 5 + [base_rps*2] * 5 + [base_rps*3] * 5 + [base_rps*4] * 5\n",
     "\n",
     "controller = exp_trace_utils.SmartProxyController(\n",
     "    server_address=server_address,\n",
@@ -140,11 +143,11 @@
      "data": {
       "text/plain": [
        "{'maxBufferSize': 5,\n",
-       " 'averageMaxBufferSize': 3.2,\n",
-       " 'averageActualBatchSize': 1,\n",
+       " 'averageMaxBufferSize': 3,\n",
+       " 'averageActualBatchSize': None,\n",
        " 'maxBufferTimeoutMs': 400,\n",
-       " 'currentReplicaCount': 2,\n",
-       " 'currentReadyReplicaCount': 2,\n",
+       " 'currentReplicaCount': 0,\n",
+       " 'currentReadyReplicaCount': 0,\n",
        " 'currentConcurrency': 0,\n",
        " 'averageConcurrency': 0,\n",
        " 'averageArrivalRate': 0,\n",
@@ -152,12 +155,10 @@
        " 'averageDispatchRate': 0,\n",
        " 'averageErrorRate': 0,\n",
        " 'averageTimeoutRatio': None,\n",
-       " 'reponseTimeAverage': 4858,\n",
-       " 'reponseTimeP50': 4858,\n",
-       " 'reponseTimeP95': 4858,\n",
-       " 'batchResponseTimeStats': {'1': {'values': [4557],\n",
-       "   'stats': {'q50': 4557, 'q95': 4557, 'average': 4557, 'count': 1},\n",
-       "   'batchSize': 1}}}"
+       " 'reponseTimeAverage': None,\n",
+       " 'reponseTimeP50': None,\n",
+       " 'reponseTimeP95': None,\n",
+       " 'batchResponseTimeStats': {}}"
       ]
      },
      "metadata": {},
@@ -265,7 +266,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9de38083ac7d42c1bd2dccfd9f696fea"
+       "model_id": "7d8d1438d8ef4795aa0efec2595cb524"
       }
      },
      "metadata": {}
@@ -284,7 +285,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "62d57c049cc4431e8855cb74af224f30"
+       "model_id": "5211a7f4fb2b4f6b98229e1c4aab4ff9"
       }
      },
      "metadata": {}
@@ -303,7 +304,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "cbe4124566e64500989b5db271c33e75"
+       "model_id": "6e6dfcb2857945548be81fa87bf80707"
       }
      },
      "metadata": {}
@@ -322,7 +323,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b4c2b74907ad4e5588df02b67ac21169"
+       "model_id": "ccdae6a8a9c348c9bebb0e4cc1207125"
       }
      },
      "metadata": {}
@@ -365,7 +366,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Request Limit Overrid: 'cpu=1000m,memory=1000Mi'\n",
+      "Request Limit Override: 'cpu=1000m,memory=1000Mi'\n",
       "kn service apply bentoml-iris --image ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447 \\\n",
       "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
       "  --request 'cpu=1000m,memory=1000Mi' \\\n",
@@ -382,7 +383,7 @@
    "source": [
     "# deploy the function\n",
     "request_limit_override = f\"'cpu={cpu_m}m,memory={ram_mb}Mi'\"\n",
-    "print('Request Limit Overrid:', request_limit_override)\n",
+    "print('Request Limit Override:', request_limit_override)\n",
     "\n",
     "workload_spec = workload_configs[service_name]\n",
     "# override request and limit values\n",
@@ -404,15 +405,15 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'response_time_ms': 5204.754,\n",
-       " 'request_id': 'e8124370-00e0-454d-869e-0f083663c21c',\n",
+       "{'response_time_ms': 4790.691,\n",
+       " 'request_id': 'd2f22940-dcd7-46c4-b2c8-672556715f4e',\n",
        " 'queue_position': 0,\n",
-       " 'received_at': datetime.datetime(2021, 6, 9, 17, 5, 40, 247000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
-       " 'response_at': datetime.datetime(2021, 6, 9, 17, 5, 45, 443000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
-       " 'upstream_response_time': 4895,\n",
+       " 'received_at': datetime.datetime(2021, 6, 9, 18, 20, 9, 522000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
+       " 'response_at': datetime.datetime(2021, 6, 9, 18, 20, 14, 301000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
+       " 'upstream_response_time': 4477,\n",
        " 'upstream_request_count': 1,\n",
-       " 'response_time_ms_server': 5196,\n",
-       " 'queue_time_ms': 301}"
+       " 'response_time_ms_server': 4779,\n",
+       " 'queue_time_ms': 302}"
       ]
      },
      "metadata": {},
@@ -451,16 +452,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# start the controller\n",
-    "controller.start_control_thread()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -493,6 +484,15 @@
    ],
    "source": [
     "# perform the experiment\n",
+    "\n",
+    "# start the controller\n",
+    "\n",
+    "if disable_controller:\n",
+    "    controller.initial_batch_size = 1\n",
+    "    print('Controller Disabled!!!')\n",
+    "else:\n",
+    "    controller.start_control_thread()\n",
+    "    \n",
     "controller.set_initial_config()\n",
     "\n",
     "# start workload generator\n",
@@ -545,6 +545,10 @@
     "! mkdir -p {res_folder}\n",
     "requests_results_filename = f'{res_name}_reqs.csv'\n",
     "proxy_results_filesname = f'{res_name}_proxy.csv'\n",
+    "if disable_controller:\n",
+    "    requests_results_filename.replace('.csv', '_no_controller.csv')\n",
+    "    proxy_results_filesname.replace('.csv', '_no_controller.csv')\n",
+    "\n",
     "df_res.to_csv(os.path.join(res_folder, requests_results_filename))\n",
     "print('Results Name:', res_name)"
    ]
