added fashion mnist pytorch workload

--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd04f7b070ef049bbd8502237a868479304b4da16a010bb509c19371ab8ff01cc23",
+   "name": "python3",
    "display_name": "Python 3.8.5 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "4f7b070ef049bbd8502237a868479304b4da16a010bb509c19371ab8ff01cc23"
   }
  },
  "nbformat": 4,
@@ -51,7 +54,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "205e6df4da684e30ab5fc56567ea5825"
+       "model_id": "926baf2dff6b4018a5e2d3b71654ebe5"
       }
      },
      "metadata": {}
@@ -70,7 +73,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c4489feeb950482db198083a3226cedf"
+       "model_id": "741e80616ac24baaabc6021846e80f38"
       }
      },
      "metadata": {}
@@ -89,7 +92,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "06b5391b10b54ae1938378aff88bb1bc"
+       "model_id": "4f24f47753424a9fb8d5aaa432c8857a"
       }
      },
      "metadata": {}
@@ -108,7 +111,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8db14f34820442b4ace0513f55f9a46e"
+       "model_id": "8001be3f6eb6406e91bdadc1b092860d"
       }
      },
      "metadata": {}
@@ -137,7 +140,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "NAME                    URL                                                    LATEST                        AGE     CONDITIONS   READY   REASON\nautoscale-go            http://autoscale-go.default.kn.nima-dev.com            autoscale-go-00035            94d     3 OK / 3     True    \nbench1                  http://bench1.default.kn.nima-dev.com                  bench1-00054                  102d    3 OK / 3     True    \nbentoml-iris            http://bentoml-iris.default.kn.nima-dev.com            bentoml-iris-00005            5d      3 OK / 3     True    \nbentoml-onnx-resnet50   http://bentoml-onnx-resnet50.default.kn.nima-dev.com   bentoml-onnx-resnet50-00004   5d      3 OK / 3     True    \nhelloworld-go           http://helloworld-go.default.kn.nima-dev.com           helloworld-go-00001           104d    3 OK / 3     True    \ntfserving-mobilenetv1   http://tfserving-mobilenetv1.default.kn.nima-dev.com   tfserving-mobilenetv1-00004   4d23h   3 OK / 3     True    \ntfserving-resnetv2      http://tfserving-resnetv2.default.kn.nima-dev.com      tfserving-resnetv2-00004      4d23h   3 OK / 3     True    \n"
+      "NAME                    URL                                                    LATEST                        AGE    CONDITIONS   READY   REASON\nautoscale-go            http://autoscale-go.default.kn.nima-dev.com            autoscale-go-00035            136d   3 OK / 3     True    \nbench1                  http://bench1.default.kn.nima-dev.com                  bench1-00054                  145d   3 OK / 3     True    \nbentoml-iris            http://bentoml-iris.default.kn.nima-dev.com            bentoml-iris-00165            47d    3 OK / 3     True    \nbentoml-onnx-resnet50   http://bentoml-onnx-resnet50.default.kn.nima-dev.com   bentoml-onnx-resnet50-00036   47d    3 OK / 3     True    \nhelloworld-go           http://helloworld-go.default.kn.nima-dev.com           helloworld-go-00001           146d   3 OK / 3     True    \ntfserving-mobilenetv1   http://tfserving-mobilenetv1.default.kn.nima-dev.com   tfserving-mobilenetv1-00029   47d    3 OK / 3     True    \ntfserving-resnetv2      http://tfserving-resnetv2.default.kn.nima-dev.com      tfserving-resnetv2-00079      47d    3 OK / 3     True    \n"
      ]
     }
    ],
@@ -221,6 +224,7 @@
     "    'bentoml-onnx-resnet50-250m-512mb',\n",
     "    'tfserving-resnetv2-250m-512mb',\n",
     "    'tfserving-mobilenetv1-250m-512mb',\n",
+    "    'bentoml-pytorch-fashionmnist-250m-512mb',\n",
     "]\n",
     "\n",
     "request_limit_override = \"'cpu=1000m,memory=1000Mi'\"\n",
