--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -159,56 +159,24 @@
      "name": "stdout",
      "text": [
       "====================\n",
-      "kn service apply bentoml-iris --image ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447 \\\n",
+      "kn service apply bentoml-pytorch-fashion-mnist --image ghcr.io/nimamahmoudi/bentoml-pytorch-fashion-mnist:20210614122950 \\\n",
       "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
       "  --request 'cpu=1000m,memory=1000Mi' \\\n",
       "  --port 5000 \\\n",
       "  -a autoscaling.knative.dev/target=1 \\\n",
       "  -a autoscaling.knative.dev/metric=concurrency\n",
       "--------------------\n",
-      "No changes to apply to service 'bentoml-iris'.\n",
-      "Service 'bentoml-iris' with latest revision 'bentoml-iris-00005' (unchanged) is available at URL:\n",
-      "http://bentoml-iris.default.kn.nima-dev.com\n",
-      "====================\n",
-      "kn service apply bentoml-onnx-resnet50 --image ghcr.io/nimamahmoudi/bentoml-onnx-resnet50-b64:20210505124300 \\\n",
-      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
-      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
-      "  --port 5000 \\\n",
-      "  -a autoscaling.knative.dev/target=1 \\\n",
-      "  -a autoscaling.knative.dev/metric=concurrency\n",
-      "--------------------\n",
-      "Applying service 'bentoml-onnx-resnet50' in namespace 'default':\n",
+      "Creating service 'bentoml-pytorch-fashion-mnist' in namespace 'default':\n",
       "\n",
-      "  0.070s The Configuration is still working to reflect the latest desired specification.\n",
-      " 20.900s Traffic is not yet migrated to the latest revision.\n",
-      " 20.927s Ingress has not yet been reconciled.\n",
-      " 20.954s Waiting for load balancer to be ready\n",
-      " 21.529s Ready to serve.\n",
+      "  0.050s The Route is still working to reflect the latest desired specification.\n",
+      "  0.170s Configuration \"bentoml-pytorch-fashion-mnist\" is waiting for a Revision to become ready.\n",
+      " 79.057s ...\n",
+      " 79.101s Ingress has not yet been reconciled.\n",
+      " 79.184s Waiting for load balancer to be ready\n",
+      " 79.575s Ready to serve.\n",
       "\n",
-      "Service 'bentoml-onnx-resnet50' applied to latest revision 'bentoml-onnx-resnet50-00005' is available at URL:\n",
-      "http://bentoml-onnx-resnet50.default.kn.nima-dev.com\n",
-      "====================\n",
-      "kn service apply tfserving-resnetv2 --image ghcr.io/nimamahmoudi/tfserving-resnet:20210429213000 \\\n",
-      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
-      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
-      "  --port 5000 \\\n",
-      "  -a autoscaling.knative.dev/target=1 \\\n",
-      "  -a autoscaling.knative.dev/metric=concurrency\n",
-      "--------------------\n",
-      "No changes to apply to service 'tfserving-resnetv2'.\n",
-      "Service 'tfserving-resnetv2' with latest revision 'tfserving-resnetv2-00004' (unchanged) is available at URL:\n",
-      "http://tfserving-resnetv2.default.kn.nima-dev.com\n",
-      "====================\n",
-      "kn service apply tfserving-mobilenetv1 --image ghcr.io/nimamahmoudi/tfserving-mobilenet:20210430005829 \\\n",
-      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
-      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
-      "  --port 5000 \\\n",
-      "  -a autoscaling.knative.dev/target=1 \\\n",
-      "  -a autoscaling.knative.dev/metric=concurrency\n",
-      "--------------------\n",
-      "No changes to apply to service 'tfserving-mobilenetv1'.\n",
-      "Service 'tfserving-mobilenetv1' with latest revision 'tfserving-mobilenetv1-00004' (unchanged) is available at URL:\n",
-      "http://tfserving-mobilenetv1.default.kn.nima-dev.com\n"
+      "Service 'bentoml-pytorch-fashion-mnist' created to latest revision 'bentoml-pytorch-fashion-mnist-00001' is available at URL:\n",
+      "http://bentoml-pytorch-fashion-mnist.default.kn.nima-dev.com\n"
      ]
     }
    ],
