--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -39,84 +39,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "fetching imagenet v2\nresizing images\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "926baf2dff6b4018a5e2d3b71654ebe5"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "converting to bentoml files\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "741e80616ac24baaabc6021846e80f38"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "extracting base64 files\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "4f24f47753424a9fb8d5aaa432c8857a"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "preprocessing for mobilenet\n"
-     ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "8001be3f6eb6406e91bdadc1b092860d"
-      }
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm.auto import tqdm\n",
     "import itertools\n",
@@ -128,7 +51,7 @@
     "from helpers import kube\n",
     "from helpers import workload\n",
     "from helpers import util\n",
-    "from helpers import request_funcs"
+    "# from helpers import request_funcs"
    ]
   },
   {
@@ -140,7 +63,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "NAME                    URL                                                    LATEST                        AGE    CONDITIONS   READY   REASON\nautoscale-go            http://autoscale-go.default.kn.nima-dev.com            autoscale-go-00035            136d   3 OK / 3     True    \nbench1                  http://bench1.default.kn.nima-dev.com                  bench1-00054                  145d   3 OK / 3     True    \nbentoml-iris            http://bentoml-iris.default.kn.nima-dev.com            bentoml-iris-00165            47d    3 OK / 3     True    \nbentoml-onnx-resnet50   http://bentoml-onnx-resnet50.default.kn.nima-dev.com   bentoml-onnx-resnet50-00036   47d    3 OK / 3     True    \nhelloworld-go           http://helloworld-go.default.kn.nima-dev.com           helloworld-go-00001           146d   3 OK / 3     True    \ntfserving-mobilenetv1   http://tfserving-mobilenetv1.default.kn.nima-dev.com   tfserving-mobilenetv1-00029   47d    3 OK / 3     True    \ntfserving-resnetv2      http://tfserving-resnetv2.default.kn.nima-dev.com      tfserving-resnetv2-00079      47d    3 OK / 3     True    \n"
+      "NAME                            URL                                                            LATEST                                AGE     CONDITIONS   READY   REASON\nautoscale-go                    http://autoscale-go.default.kn.nima-dev.com                    autoscale-go-00035                    142d    3 OK / 3     True    \nbench1                          http://bench1.default.kn.nima-dev.com                          bench1-00054                          150d    3 OK / 3     True    \nbentoml-iris                    http://bentoml-iris.default.kn.nima-dev.com                    bentoml-iris-00171                    53d     3 OK / 3     True    \nbentoml-keras-toxic-comments    http://bentoml-keras-toxic-comments.default.kn.nima-dev.com                                          38s     0 OK / 3     False   RevisionMissing : Configuration \"bentoml-keras-toxic-comments\" does not have any ready Revision.\nbentoml-onnx-resnet50           http://bentoml-onnx-resnet50.default.kn.nima-dev.com           bentoml-onnx-resnet50-00036           53d     3 OK / 3     True    \nbentoml-pytorch-fashion-mnist   http://bentoml-pytorch-fashion-mnist.default.kn.nima-dev.com   bentoml-pytorch-fashion-mnist-00007   5d22h   3 OK / 3     True    \nhelloworld-go                   http://helloworld-go.default.kn.nima-dev.com                   helloworld-go-00001                   152d    3 OK / 3     True    \ntfserving-mobilenetv1           http://tfserving-mobilenetv1.default.kn.nima-dev.com           tfserving-mobilenetv1-00029           52d     3 OK / 3     True    \ntfserving-resnetv2              http://tfserving-resnetv2.default.kn.nima-dev.com              tfserving-resnetv2-00079              52d     3 OK / 3     True    \n"
      ]
     }
    ],
@@ -159,24 +82,26 @@
      "name": "stdout",
      "text": [
       "====================\n",
-      "kn service apply bentoml-pytorch-fashion-mnist --image ghcr.io/nimamahmoudi/bentoml-pytorch-fashion-mnist:20210614122950 \\\n",
+      "kn service apply bentoml-keras-toxic-comments --image ghcr.io/nimamahmoudi/bentoml-keras-toxic-comment-classification:20210616224937 \\\n",
       "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
       "  --request 'cpu=1000m,memory=1000Mi' \\\n",
       "  --port 5000 \\\n",
       "  -a autoscaling.knative.dev/target=1 \\\n",
       "  -a autoscaling.knative.dev/metric=concurrency\n",
       "--------------------\n",
-      "Creating service 'bentoml-pytorch-fashion-mnist' in namespace 'default':\n",
+      "Applying service 'bentoml-keras-toxic-comments' in namespace 'default':\n",
       "\n",
-      "  0.050s The Route is still working to reflect the latest desired specification.\n",
-      "  0.170s Configuration \"bentoml-pytorch-fashion-mnist\" is waiting for a Revision to become ready.\n",
-      " 79.057s ...\n",
-      " 79.101s Ingress has not yet been reconciled.\n",
-      " 79.184s Waiting for load balancer to be ready\n",
-      " 79.575s Ready to serve.\n",
+      "  0.042s Configuration \"bentoml-keras-toxic-comments\" does not have any ready Revision.\n",
+      "  0.099s ...\n",
+      "  0.156s Configuration \"bentoml-keras-toxic-comments\" is waiting for a Revision to become ready.\n",
+      "  0.217s ...\n",
+      " 51.024s ...\n",
+      " 51.104s Ingress has not yet been reconciled.\n",
+      " 51.160s Waiting for load balancer to be ready\n",
+      " 51.369s Ready to serve.\n",
       "\n",
-      "Service 'bentoml-pytorch-fashion-mnist' created to latest revision 'bentoml-pytorch-fashion-mnist-00001' is available at URL:\n",
-      "http://bentoml-pytorch-fashion-mnist.default.kn.nima-dev.com\n"
+      "Service 'bentoml-keras-toxic-comments' applied to latest revision 'bentoml-keras-toxic-comments-00002' is available at URL:\n",
+      "http://bentoml-keras-toxic-comments.default.kn.nima-dev.com\n"
      ]
     }
    ],
@@ -193,6 +118,7 @@
     "    'tfserving-resnetv2-250m-512mb',\n",
     "    'tfserving-mobilenetv1-250m-512mb',\n",
     "    'bentoml-pytorch-fashionmnist-250m-512mb',\n",
+    "    'bentoml-keras-toxic-comments-250m-512mb',\n",
     "]\n",
     "\n",
     "request_limit_override = \"'cpu=1000m,memory=1000Mi'\"\n",
