fixed the prediction structure for toxic comments

--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -63,7 +63,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "NAME                            URL                                                            LATEST                                AGE     CONDITIONS   READY   REASON\nautoscale-go                    http://autoscale-go.default.kn.nima-dev.com                    autoscale-go-00035                    142d    3 OK / 3     True    \nbench1                          http://bench1.default.kn.nima-dev.com                          bench1-00054                          150d    3 OK / 3     True    \nbentoml-iris                    http://bentoml-iris.default.kn.nima-dev.com                    bentoml-iris-00171                    53d     3 OK / 3     True    \nbentoml-keras-toxic-comments    http://bentoml-keras-toxic-comments.default.kn.nima-dev.com                                          38s     0 OK / 3     False   RevisionMissing : Configuration \"bentoml-keras-toxic-comments\" does not have any ready Revision.\nbentoml-onnx-resnet50           http://bentoml-onnx-resnet50.default.kn.nima-dev.com           bentoml-onnx-resnet50-00036           53d     3 OK / 3     True    \nbentoml-pytorch-fashion-mnist   http://bentoml-pytorch-fashion-mnist.default.kn.nima-dev.com   bentoml-pytorch-fashion-mnist-00007   5d22h   3 OK / 3     True    \nhelloworld-go                   http://helloworld-go.default.kn.nima-dev.com                   helloworld-go-00001                   152d    3 OK / 3     True    \ntfserving-mobilenetv1           http://tfserving-mobilenetv1.default.kn.nima-dev.com           tfserving-mobilenetv1-00029           52d     3 OK / 3     True    \ntfserving-resnetv2              http://tfserving-resnetv2.default.kn.nima-dev.com              tfserving-resnetv2-00079              52d     3 OK / 3     True    \n"
+      "NAME                            URL                                                            LATEST                                AGE     CONDITIONS   READY   REASON\nautoscale-go                    http://autoscale-go.default.kn.nima-dev.com                    autoscale-go-00035                    142d    3 OK / 3     True    \nbench1                          http://bench1.default.kn.nima-dev.com                          bench1-00054                          150d    3 OK / 3     True    \nbentoml-iris                    http://bentoml-iris.default.kn.nima-dev.com                    bentoml-iris-00171                    53d     3 OK / 3     True    \nbentoml-keras-toxic-comments    http://bentoml-keras-toxic-comments.default.kn.nima-dev.com    bentoml-keras-toxic-comments-00002    90m     3 OK / 3     True    \nbentoml-onnx-resnet50           http://bentoml-onnx-resnet50.default.kn.nima-dev.com           bentoml-onnx-resnet50-00036           53d     3 OK / 3     True    \nbentoml-pytorch-fashion-mnist   http://bentoml-pytorch-fashion-mnist.default.kn.nima-dev.com   bentoml-pytorch-fashion-mnist-00007   5d23h   3 OK / 3     True    \nhelloworld-go                   http://helloworld-go.default.kn.nima-dev.com                   helloworld-go-00001                   152d    3 OK / 3     True    \ntfserving-mobilenetv1           http://tfserving-mobilenetv1.default.kn.nima-dev.com           tfserving-mobilenetv1-00029           53d     3 OK / 3     True    \ntfserving-resnetv2              http://tfserving-resnetv2.default.kn.nima-dev.com              tfserving-resnetv2-00079              53d     3 OK / 3     True    \n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stdout",
      "text": [
       "====================\n",
-      "kn service apply bentoml-keras-toxic-comments --image ghcr.io/nimamahmoudi/bentoml-keras-toxic-comment-classification:20210616224937 \\\n",
+      "kn service apply bentoml-keras-toxic-comments --image ghcr.io/nimamahmoudi/bentoml-keras-toxic-comment-classification:20210622155420 \\\n",
       "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
       "  --request 'cpu=1000m,memory=1000Mi' \\\n",
       "  --port 5000 \\\n",
@@ -91,16 +91,13 @@
       "--------------------\n",
       "Applying service 'bentoml-keras-toxic-comments' in namespace 'default':\n",
       "\n",
-      "  0.042s Configuration \"bentoml-keras-toxic-comments\" does not have any ready Revision.\n",
-      "  0.099s ...\n",
-      "  0.156s Configuration \"bentoml-keras-toxic-comments\" is waiting for a Revision to become ready.\n",
-      "  0.217s ...\n",
-      " 51.024s ...\n",
-      " 51.104s Ingress has not yet been reconciled.\n",
-      " 51.160s Waiting for load balancer to be ready\n",
-      " 51.369s Ready to serve.\n",
+      "  0.055s The Configuration is still working to reflect the latest desired specification.\n",
+      " 12.088s Traffic is not yet migrated to the latest revision.\n",
+      " 12.175s Ingress has not yet been reconciled.\n",
+      " 12.250s Waiting for load balancer to be ready\n",
+      " 12.443s Ready to serve.\n",
       "\n",
-      "Service 'bentoml-keras-toxic-comments' applied to latest revision 'bentoml-keras-toxic-comments-00002' is available at URL:\n",
+      "Service 'bentoml-keras-toxic-comments' applied to latest revision 'bentoml-keras-toxic-comments-00003' is available at URL:\n",
       "http://bentoml-keras-toxic-comments.default.kn.nima-dev.com\n"
      ]
     }
